Table users {
  id bigserial [pk] // primary key, auto-increment
  username varchar(255) [unique, not null]
  email varchar(255) [unique, not null]
  password bytea [not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00']
  created_at timestamptz [not null, default: `now()`]
}

Table recipes {
  id bigserial [pk] // primary key, auto-increment
  name varchar(255) [unique, not null]
  preparation_time_in_mins int [not null]
  difficulty_level int [not null]
  cuisine_type varchar(255) [not null]
  calorie_count_per_serving int [not null]
  servings_count int [not null]
  preparation_steps text [not null]
  user_id bigint [ref: > users.id, not null] // user who uploaded the recipe
  created_at timestamptz [not null, default: `now()`]
}

Table ingredients {
  id bigserial [pk] // primary key, auto-increment
  name varchar(255) [unique, not null]
  calorie_count_per_unit int [not null]
}

Table recipe_ingredients {
  id bigserial [pk] // primary key, auto-increment
  recipe_id int [ref: > recipes.id, not null]
  ingredient_id int [ref: > ingredients.id, not null]
  quantity float [not null]
  unit varchar(255) [not null]
}

Table sessions {
  id uuid [primary key]
  username varchar [ref: > users.username, unique, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked bool [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]

    Indexes {
      id
    }
}